--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -48,6 +48,9 @@ ul li{
 	margin-bottom:14px;
 	padding:9px 14px;
 }
+.content {
+	padding:10px 0;
+}
 /*
   ***************************************
   BOOTSTRAP NAVBAR
